--- a/FastAI Projects/1-AfricanHairClassification/AfricanHairClassification.ipynb
+++ b/FastAI Projects/1-AfricanHairClassification/AfricanHairClassification.ipynb
@@ -82,9 +82,9 @@
    },
    "outputs": [],
    "source": [
-    "results = search_images_bing(key, 'African woman corn rows hairstyle')\n",
-    "ims = results.attrgot('content_url')\n",
-    "len(ims)"
+    "# results = search_images_bing(key, 'African woman corn rows hairstyle')\n",
+    "# ims = results.attrgot('content_url')\n",
+    "# len(ims)"
    ]
   },
   {
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1092,7 +1092,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "775d1a5971bc44cab06fd5b1e76c6778",
+       "model_id": "eb397fd977994f9aa30ce7f7a363107e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1157,7 +1157,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5903ee46668f48a6807511f5cfd78aa8",
+       "model_id": "e6db663252dd480baff475802cc68792",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1165,9 +1165,7 @@
        "Output()"
       ]
      },
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -1539,7 +1537,7 @@
    "split_at_heading": true
   },
   "kernelspec": {
-   "display_name": "Python [conda env:my_env]",
+   "display_name": "Python [conda env:my_env] *",
    "language": "python",
    "name": "conda-env-my_env-py"
   },
