--- a/FastAI Projects/1-AfricanHairClassification/DeployApp.ipynb
+++ b/FastAI Projects/1-AfricanHairClassification/DeployApp.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#from ipyupload import FileUpload  #https://gitlab.com/oscar6echo/ipyupload\n",
-    "from ipywidgets import HBox,VBox,widgets,Button,Checkbox,Dropdown,Layout,Box,Output,Label,FileUpload\n",
+    "from ipywidgets import HBox,VBox,widgets,Button,Checkbox,Dropdown,Layout,Box,Output,Label,FileUpload,IntSlider\n",
     "from fastai2.vision.all import *\n",
     "\n",
     "# !jupyter nbextension enable --py widgetsnbextension --sys-prefix\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,12 +67,52 @@
     "with out_pl: display(img.to_thumb(400,300))\n",
     "\n",
     "# Prediction\n",
-    "label_pred = widgets.Label()"
+    "# info = blue(90-100),warning=orange (50 - 90), success=green(20 - 50),  danger=red(0 - 20)\n",
+    "hairstyle = \"Afro\"\n",
+    "predicion_value = 0.9256\n",
+    "bar_pred = \"info\"\n",
+    "label_header1 = widgets.HTML()\n",
+    "label_header1.value= f\"<font color=deeppink><font size=15><font family=cursive><b> {hairstyle} </font>\"\n",
+    "\n",
+    "# Probability\n",
+    "prediction = widgets.FloatProgress(\n",
+    "                value=f'{predicion_value * 100}',\n",
+    "                min=0,\n",
+    "                max=100.0,\n",
+    "                step=0.1,\n",
+    "                description=f'{predicion_value * 100}%',\n",
+    "                bar_style=f'{bar_pred}',\n",
+    "                orientation='horizontal'\n",
+    "            )\n",
+    "\n",
+    "# prediction = widgets.FloatRangeSlider(\n",
+    "#                     value=[0, f'{predicion_value * 100}'],\n",
+    "#                     min=0,\n",
+    "#                     max=100.0,\n",
+    "#                     step=0.1,\n",
+    "#                     description='Test:',\n",
+    "#                     disabled=False,\n",
+    "#                     continuous_update=False,\n",
+    "#                     orientation='horizontal',\n",
+    "#                     readout=True,\n",
+    "#                     readout_format='.1f',\n",
+    "#                 )\n",
+    "\n",
+    "\n",
+    "# label_header = widgets.Label()\n",
+    "# label_header = widgets.Label(value = r'\\(\\color{orange} {\\huge Prediction:} {\\LARGE '+ hairstyle +'} \\)')\n",
+    "#labelWidget = widgets.Label(value = r'\\(\\color{red} {' + text  + '}\\)')\n",
+    "\n",
+    "label_pred = widgets.Label()\n",
+    "\n",
+    "#prediction\n",
+    "# label_layout = Layout(width='100px',height='30px')\n",
+    "# display(HBox([Label('A description',layout=label_layout), IntSlider()]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,12 +132,50 @@
     "    out_pl.clear_output()\n",
     "    with out_pl: display(img.to_thumb(400,300))\n",
     "    pred, pred_idx, probs = learn_inf.predict(img)\n",
+    "    if(pred == 'afro'):\n",
+    "        hairstyle = \"Afro\"\n",
+    "    elif(pred == 'bantu_knots'):\n",
+    "        hairstyle = \"Bantu Knots\"\n",
+    "    elif(pred == 'box_braids'):\n",
+    "        hairstyle = \"Braids\"\n",
+    "    elif(pred == 'cornrows'):\n",
+    "        hairstyle = \"Corn Rows\"\n",
+    "    elif(pred == 'curly'):\n",
+    "        hairstyle = \"Curly\"\n",
+    "    elif(pred == 'dreadlocks'):\n",
+    "        hairstyle = \"Dreadlocks\"\n",
+    "    elif(pred == 'pixie'):\n",
+    "        hairstyle = \"Pixie HairStyle\"\n",
+    "    elif(pred == 'ponytail'):\n",
+    "        hairstyle = \"Ponytail\"\n",
+    "    elif(pred == 'twa'):\n",
+    "        hairstyle = \"Twa or Natural\"\n",
+    "    else:\n",
+    "        hairstyle = \"Not In Dataset\"\n",
+    "    \n",
+    "    predicion_value = probs[pred_idx]\n",
+    "    predicion_value *= 100\n",
+    "    # info = blue(90-100),warning=orange (50 - 90), success=green(20 - 50),  danger=red(0 - 20)\n",
+    "    if(predicion_value >= 90):\n",
+    "        bar_pred = \"info\"\n",
+    "    elif(predicion_value >= 50 and prediction_value < 90):\n",
+    "        bar_pred = \"warning\"\n",
+    "    elif(predicion_value >= 20 and predicion_value < 50):\n",
+    "        bar_pred = \"success\"\n",
+    "    elif(predicion_value <= 20):\n",
+    "        bar_pred = \"danger\"       \n",
+    "        \n",
+    "    label_header1.value= f\"<font color=deeppink><font size=15><font family=cursive><b> {hairstyle} </font>\"\n",
+    "    prediction.value = f'{predicion_value :.02f}'\n",
+    "    prediction.description = f'{predicion_value :.02f}%'\n",
+    "    prediction.bar_style = f'{bar_pred}'\n",
+    "    #label_header.value = r'\\(\\color{orange} {\\huge Prediction:} {\\LARGE '+ hairstyle +'} \\)' \n",
     "    label_pred.value = f'Prediction:{pred}; Probability:{probs[pred_idx]:.04f}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,13 +185,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 67,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd12846f68364cdc80d27543c03a15a6",
+       "model_id": "c10f373e632748b4804e0d601dceff92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0c757143ba14ce696c53fd6a534e78b",
+       "model_id": "3c08d32b57d44023a79f975e556434ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,36 +221,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77ecc2ef8d4443e483f7bd146701ca63",
+       "model_id": "5743c1304025495b8c52ea94cee21cd3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "HBox(children=(VBox(children=(FileUpload(value={}, button_style='danger', description='Upload', style=ButtonSt…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "340c3f54babb4760a86d5c3231fd7af9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(Output(outputs=({'output_type': 'display_data', 'data': {'text/plain': '<PIL.Ima…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -182,17 +238,35 @@
     "header_layout = widgets.Layout(display='flex',\n",
     "                justify_content = 'center',\n",
     "                align_items='center',\n",
+    "                height = '50px',\n",
     "                margin='10px 10px 10px 10px')\n",
     "\n",
     "button_layout = widgets.Layout(margin='50px 10px 10px 5px')\n",
     "\n",
     "box_layout = widgets.Layout(display='flex',\n",
-    "                flex_flow='column',\n",
     "                justify_content = 'center',\n",
     "                align_items='center',\n",
-    "                width='80%',\n",
-    "                margin='30px 150px 100px 80px')\n",
+    "                width='100%',\n",
+    "                margin='10px 10px 10px 10px')\n",
     "\n",
+    "box_layout2 = widgets.Layout(display='flex',\n",
+    "                justify_content = 'center',\n",
+    "                align_items='center',\n",
+    "                width='100%',\n",
+    "                margin='20px 10px 10px 10px')\n",
+    "\n",
+    "box_layout2 = widgets.Layout(display='flex',\n",
+    "                justify_content = 'center',\n",
+    "                align_items='center',\n",
+    "                width='100%',\n",
+    "                margin='20px 10px 10px 10px')\n",
+    "\n",
+    "# box_layout2 = widgets.Layout(display='flex',\n",
+    "#                 #justify_content = 'center',\n",
+    "#                 align_items='center',\n",
+    "#                 width='40%',\n",
+    "#                 margin='300px 550px 100px 80px'\n",
+    "#                 )\n",
     "#box = widgets.HBox(children=[btn],layout=box_layout)\n",
     "# display(VBox([widgets.Label('What hairstyle is this?'), btn_upload, btn_run, out_pl, label_pred],layout=box_layout))\n",
     "\n",
@@ -200,25 +274,27 @@
     "header2 = VBox([widgets.HTML(value=\"<font color=black><font size=5><i> What hairstyle are you wearing today? </font>\")],layout=header_layout)\n",
     "\n",
     "\n",
-    "vbox1 = VBox([btn_upload],layout=button_layout)\n",
-    "vbox2 = VBox([out_pl],layout=box_layout)\n",
+    "vbox1 = VBox([label_header1,prediction],layout=box_layout2)\n",
+    "vbox2 = VBox([btn_upload,out_pl,vbox1],layout=box_layout)\n",
     "\n",
-    "vbox3 = VBox([label_pred],layout=box_layout)\n",
+    "vbox3 = VBox([label_header1, prediction],layout=box_layout2)\n",
     "# vbox2 = VBox([btn_upload])\n",
     "# vbox3 = VBox([btn_run, out_pl, label_pred])\n",
     "\n",
     "display(header1)\n",
     "display(header2)\n",
     "\n",
-    "display(HBox([vbox1]))\n",
+    "#display(HBox([vbox1]))\n",
     "\n",
-    "display(HBox([vbox2,vbox3]))\n",
+    "# display(HBox([vbox2,vbox3]))\n",
+    "display(HBox([vbox2]))\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,6 +339,26 @@
     "\n",
     "# display(VBox([widgets.Label('Select your bear!'), btns_upload, out_pl, label_pred]))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.widget-label { min-width: 20ex !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
