adding smaller size classifier model

--- a/FastAIProjects/1-AfricanHairClassification/DeployApp.ipynb
+++ b/FastAIProjects/1-AfricanHairClassification/DeployApp.ipynb
@@ -17,24 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc05d5b687fa487ab75e1372ff47ef9b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FileUpload(value={}, description='Upload')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# btn_upload = widgets.FileUpload()\n",
     "# btn_upload\n",
@@ -56,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load trained model to be used for prediction\n",
     "path = Path()\n",
-    "learn_inf = load_learner('hairClassifier.pkl', cpu=True)\n",
+    "learn_inf = load_learner('export.pkl', cpu=True)\n",
     "\n",
     "# <font color=crimson><font size=15><font family=cursive><b> Upload Image... </font>\n",
     "\n",
@@ -122,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -203,7 +188,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b5f1a8f8a794abaa2732aeb93355dd7",
+       "model_id": "a0b5ed4b8b384f58b56a290007f4329b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "469b1603f391408d8ec41be4fb96e911",
+       "model_id": "c319668f2a7a4b15b54c2be042acf979",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +216,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad419c42bda44f3e925a8eaf72447a12",
+       "model_id": "6958d09035ee479b800100c83cc526b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +230,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95270129d66e4fc6a352dd6406b8910f",
+       "model_id": "13aa263502c74e3ba4d8a4536dcfd5da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -425,7 +410,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:my_env] *",
+   "display_name": "Python [conda env:my_env]",
    "language": "python",
    "name": "conda-env-my_env-py"
   },
