added requirements for binder

--- a/DeployApp.ipynb
+++ b/DeployApp.ipynb
@@ -56,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load trained model to be used for prediction\n",
     "path = Path()\n",
-    "learn_inf = load_learner('hairClassifier.pkl', cpu=True)\n",
+    "learn_inf = load_learner('export.pkl', cpu=True)\n",
     "\n",
     "# <font color=crimson><font size=15><font family=cursive><b> Upload Image... </font>\n",
     "\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -203,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b5f1a8f8a794abaa2732aeb93355dd7",
+       "model_id": "d1780ebe5d35412b8662949ad34e677b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,7 +217,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "469b1603f391408d8ec41be4fb96e911",
+       "model_id": "3a042dcfb25e41e0a8296c17d070ce48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +231,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad419c42bda44f3e925a8eaf72447a12",
+       "model_id": "1f0bba2d86f34829bbaa4e8ac7af53a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95270129d66e4fc6a352dd6406b8910f",
+       "model_id": "8f7981199fee4f0182f8a6ee5ffd8b46",
        "version_major": 2,
        "version_minor": 0
       },
@@ -314,21 +314,21 @@
     "\n",
     "header1 = VBox([widgets.HTML(value=\"<font color=crimson><font size=15><font family=cursive><b> African HairStyle Classifier </font>\")],layout=header_layout)\n",
     "header2 = VBox([widgets.HTML(value=\"<font color=black><font size=5><i> \\\"Now, tell me what hairstyle Im looking at...\\\" </font>\")],layout=header_layout)\n",
-    "header3 = VBox([image_placeholder],layout=box_layout2)\n",
+    "#header3 = VBox([image_placeholder],layout=box_layout2)\n",
     "\n",
     "\n",
     "vbox1 = VBox([label_header1,prediction],layout=box_layout2)\n",
     "vbox2 = VBox([btn_upload,out_pl,vbox1],layout=box_layout)\n",
     "\n",
     "\n",
-    "file = open(\"afro.png\", \"rb\")\n",
-    "image = file.read()\n",
-    "image_placeholder_right = widgets.Image(value=image,\n",
-    "                                  format='png',\n",
-    "                                  width=100,\n",
-    "                                  height=10,\n",
-    "                                  layout=box_layout4\n",
-    "                                 )\n",
+    "# file = open(\"afro.png\", \"rb\")\n",
+    "# image = file.read()\n",
+    "# image_placeholder_right = widgets.Image(value=image,\n",
+    "#                                   format='png',\n",
+    "#                                   width=100,\n",
+    "#                                   height=10,\n",
+    "#                                   layout=box_layout4\n",
+    "#                                  )\n",
     "\n",
     "display(header1)\n",
     "display(header2)\n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:my_env] *",
+   "display_name": "Python [conda env:my_env]",
    "language": "python",
    "name": "conda-env-my_env-py"
   },
