Creating learner from scratch

--- a/FastAIProjects/1-AfricanHairClassification/AfricanHairClassification.ipynb
+++ b/FastAIProjects/1-AfricanHairClassification/AfricanHairClassification.ipynb
@@ -565,7 +565,8 @@
     },
     "colab_type": "code",
     "id": "wOMCFwZJnMb3",
-    "outputId": "b067c660-6006-4b2c-ceba-aa6555aea9e4"
+    "outputId": "b067c660-6006-4b2c-ceba-aa6555aea9e4",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1537,7 +1538,7 @@
    "split_at_heading": true
   },
   "kernelspec": {
-   "display_name": "Python [conda env:my_env] *",
+   "display_name": "Python [conda env:my_env]",
    "language": "python",
    "name": "conda-env-my_env-py"
   },
